numInitialChunks Argument is Not Validated

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.0.2, 4.1.1
    • Affects Version/s: 3.6.0
    • Component/s: Sharding
    • None
    • Fully Compatible
    • ALL
    • v4.0
    • Sharding 2018-07-16
    • 4
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      It looks like the fix in SERVER-22430 got missed with the introduction of the _configsvrShardCollection command. As such, we no longer validate the numInitialChunks argument to shardCollection.

            Assignee:
            Cheahuychou Mao
            Reporter:
            Robert Guo (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: