SERVER-35676 Handle integer overflow when validating numInitialChunks